--- a/public/login.html
+++ b/public/login.html
@@ -22,7 +22,7 @@
 				     		<a class="nav-link" href="#">Signin</a>
 				     	</li>
 				     	<li class="nav-item">
-				     		<a class="nav-link" href="#">Pricing</a>
+				     		<a class="nav-link" href="#">Signup</a>
 				     	</li>
 				     </ul>
 		  		</div>
