--- a/public/login.html
+++ b/public/login.html
@@ -40,11 +40,17 @@
         </button>
       </div>
       <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <form id="signup-form">
+        	<div class="form-group">
+        		<input type="text" id="signup-email" class="form-control" placeholder="Title" required>
+        	</div>
+        	<div class="form-group">
+        		<input type="password" id="signup-password" class="form-control" placeholder="Password" required>
+        	</div>
+     	<button type="submit" class="btn btn-primary">
+        		Signup
+     	</button>
+        </form>
       </div>
     </div>
   </div>
