--- a/public/login.html
+++ b/public/login.html
@@ -42,7 +42,7 @@
       <div class="modal-body">
         <form id="signup-form">
         	<div class="form-group">
-        		<input type="text" id="signup-email" class="form-control" placeholder="Title" required>
+        		<input type="text" id="signup-email" class="form-control" placeholder="email" required>
         	</div>
         	<div class="form-group">
         		<input type="password" id="signup-password" class="form-control" placeholder="Password" required>
