--- a/public/login.html
+++ b/public/login.html
@@ -69,30 +69,33 @@
 
 
 	<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
+		  // Import the functions you need from the SDKs you need
+		  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js";
+		  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-analytics.js";
+		  // TODO: Add SDKs for Firebase products that you want to use
+		  // https://firebase.google.com/docs/web/setup#available-libraries
 
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyCnNjZuL6XJoA4Ed9yXOn26cdEhrJyXxnQ",
-    authDomain: "dotronicdemo-4598f.firebaseapp.com",
-    databaseURL: "https://dotronicdemo-4598f-default-rtdb.firebaseio.com",
-    projectId: "dotronicdemo-4598f",
-    storageBucket: "dotronicdemo-4598f.appspot.com",
-    messagingSenderId: "224565645635",
-    appId: "1:224565645635:web:3c73c635e291c0d36d1ff6",
-    measurementId: "G-WQGZDD28YH"
-  };
+		  // Your web app's Firebase configuration
+		  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+		  const firebaseConfig = {
+		    apiKey: "AIzaSyCnNjZuL6XJoA4Ed9yXOn26cdEhrJyXxnQ",
+		    authDomain: "dotronicdemo-4598f.firebaseapp.com",
+		    databaseURL: "https://dotronicdemo-4598f-default-rtdb.firebaseio.com",
+		    projectId: "dotronicdemo-4598f",
+		    storageBucket: "dotronicdemo-4598f.appspot.com",
+		    messagingSenderId: "224565645635",
+		    appId: "1:224565645635:web:3c73c635e291c0d36d1ff6",
+		    measurementId: "G-WQGZDD28YH"
+		  };
 
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-</script>
+		  // Initialize Firebase
+		  const app = initializeApp(firebaseConfig);
+		  const analytics = getAnalytics(app);
+	</script>
 
+<!-- MAIN JS CUSTOM CODE -->
+
+	<script src="main.js"></script>
 
 	</body>
 </html>
