--- a/public/login.html
+++ b/public/login.html
@@ -69,19 +69,16 @@
 	<!-- FIREBASE SCRIPTS -->
 
 
-	<script type="module">
-		  // Import the functions you need from the SDKs you need
-		  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js";
-		  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-analytics.js";
+		  <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js"></script>
 
-		  // TODO: Add SDKs for Firebase products that you want to use
-		  // https://firebase.google.com/docs/web/setup#available-libraries
+		  <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-analytics.js";></script>
 
+		  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js";></script>
 
-		  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-		  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+		  <!-- TODO: Add SDKs for Firebase products that you want to use
+		  // https://firebase.google.com/docs/web/setup#available-libraries-->
 
-
+	<script>
 		  // Your web app's Firebase configuration
 		  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 		  const firebaseConfig = {
