--- a/public/login.html
+++ b/public/login.html
@@ -95,7 +95,7 @@
 		  // Initialize Firebase
 		  const app = initializeApp(firebaseConfig);
 		  const analytics = getAnalytics(app);
-		  const auth = firebase.auth();
+		  const auth = getAuth();
 	</script>
 
 <!-- MAIN JS CUSTOM CODE -->
