--- a/public/login.html
+++ b/public/login.html
@@ -74,7 +74,7 @@
 		  // Import the functions you need from the SDKs you need
 		  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js";
 		  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-analytics.js";
-		  import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js";
+		  import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.1.0/firebase-auth.js";
 
 		  // TODO: Add SDKs for Firebase products that you want to use
 		  // https://firebase.google.com/docs/web/setup#available-libraries
