--- a/public/login.html
+++ b/public/login.html
@@ -94,9 +94,15 @@
 		  };
 
 		  // Initialize Firebase
+
+		  const email = document.querySelector('#signup-email').value;
+		  const password = document.querySelector('#signup-password').value;
+
+
+
 		  const app = initializeApp(firebaseConfig);
 		  const auth = getAuth();
-		  createUserWithEmailAndPassword(email,password)
+		  createUserWithEmailAndPassword(auth, email, password)
 		  .then(userCredential => {
 			console.log('sing up')
 		})
