--- a/public/login.html
+++ b/public/login.html
@@ -95,18 +95,8 @@
 
 		  // Initialize Firebase
 
-		  const email = document.querySelector('#signup-email').value;
-		  const password = document.querySelector('#signup-password').value;
-
-
-
 		  const app = initializeApp(firebaseConfig);
-		  const auth = getAuth();
-		  createUserWithEmailAndPassword(auth, email, password)
-		  .then(userCredential => {
-			console.log('sing up')
-		})
-
+		  const auth = firebase.auth();
 
 		  const analytics = getAnalytics(app);
 		  
@@ -114,6 +104,6 @@
 
 <!-- MAIN JS CUSTOM CODE -->
 
-	<!--script src="main.js"></script-->
+	<script src="main.js"></script>
 	</body>
 </html>
