--- a/public/login.html
+++ b/public/login.html
@@ -94,7 +94,7 @@
 
 		  // Initialize Firebase
 
-		  const app = initializeApp(firebaseConfig);
+		  firebase.initializeApp(firebaseConfig);
 		  const auth = firebase.auth();
 
 		  const analytics = getAnalytics(app);
