--- a/public/login.html
+++ b/public/login.html
@@ -96,8 +96,7 @@
 
 		  firebase.initializeApp(firebaseConfig);
 		  const auth = firebase.auth();
-
-		  const analytics = getAnalytics(app);
+		  const fs = firebase.firestore();
 		  
 	</script>
 
