--- a/public/login.html
+++ b/public/login.html
@@ -15,7 +15,7 @@
 	<div class="body"></div>
 		<div class="grad"></div>
 			<div class="header">
-				<div>Site<span>Random</span></div>
+				<div>Dot<span>Ronic</span></div>
 			</div>
 		<br>
 	<div class="login">
