--- a/public/login.html
+++ b/public/login.html
@@ -21,7 +21,7 @@
 	<div class="login">
 				<input type="text" placeholder="username" id="email" name="user"><br>
 				<input type="password" placeholder="password" id="password" name="password"><br>
-				<input type="button" value="Login">
+				<input type="button" id="signUp" value="SignUp">
 		</div>
 	</body>
 </html>
