--- a/public/login.html
+++ b/public/login.html
@@ -6,8 +6,7 @@
 	<title>Dotronic login</title>
 	<script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
-  
-
+	<script src="main.js"></script>
 	<link rel="stylesheet" href="css/login.css">
 </head>
 <body>
