--- a/public/login.html
+++ b/public/login.html
@@ -19,7 +19,7 @@
 	<div class="login">
 				<input type="text" placeholder="username" id="email" name="user"><br>
 				<input type="password" placeholder="password" id="password" name="password"><br>
-				<button onclick="SignIn()" id="signIn" type="button"  value="SignIn"></button>
+				<input type="button" id="signIn" value="SignIn">
 		</div>
 	</body>
 </html>
