--- a/public/login.html
+++ b/public/login.html
@@ -16,10 +16,15 @@
 				<div>Dot<span>Ronic</span></div>
 			</div>
 		<br>
-	<div class="login">
+		<div class="login">
 				<input type="text" placeholder="username" id="email" name="user"><br>
 				<input type="password" placeholder="password" id="password" name="password"><br>
-				<input type="buttom" id="signIn" value="SignIn">
+				<input type="button" id="signIn" value="SignIn">
+		</div>
+		<div class="login">
+				<input type="text" placeholder="username" id="email" name="user"><br>
+				<input type="password" placeholder="password" id="password" name="password"><br>
+				<input type="button" id="signUp" value="SignUp">
 		</div>
 	</body>
 </html>
