--- a/public/sala.html
+++ b/public/sala.html
@@ -61,7 +61,7 @@
 			<nav class="full-width">
 				<ul class="full-width list-unstyle menu-principal">
 					<li class="full-width">
-						<a href="index.html" class="full-width">
+						<a href="home.html" class="full-width">
 							<div class="navLateral-body-cl">
 								<i class="zmdi zmdi-view-dashboard"></i>
 							</div>
