--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/normalize.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Dotronic login</title>
 	<script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
